--- a/config/jei/ingredient-list-mod-sort-order.ini
+++ b/config/jei/ingredient-list-mod-sort-order.ini
@@ -5,8 +5,6 @@ Astral Sorcery
 Backpacked
 Carrots Lib
 Charm
-Chisel
-Chisels & bits
 Colt's Cosmetic Armour Mod
 Curios API
 Desolation (Forge)
@@ -24,9 +22,17 @@ SecurityCraft
 Terra Incognita
 Tough As Nails
 Valhelsia Structures
-Wolves With Armor
-Zombie Extreme
 Alex's Mobs
-Crafting Dead
-Crafting Dead Survival
 MrCrayfish's Furniture Mod
+Comforts
+Darker Depths
+Doggy Talents 2
+First Aid
+Hats
+Mowzie's Mobs
+Pandoras Creatures
+Realistic Torches
+Wall-Jump!
+YUNG's Better Portals
+Better Animals Plus
+BetterEnd Forge
