--- a/config/jei/recipe-category-sort-order.ini
+++ b/config/jei/recipe-category-sort-order.ini
@@ -18,7 +18,6 @@ astralsorcery:transmutation
 astralsorcery:well
 charm:firing
 charm:woodcutting
-chisel:chiseling
 jei:information
 mekanism:antiprotonic_nucleosynthesizer
 mekanism:chemical_crystallizer
@@ -50,3 +49,6 @@ mekanism:thermal_evaporation_controller
 mekanismgenerators:fission_reactor_casing
 securitycraft:securitycraft_to_vanilla
 securitycraft:vanilla_to_securitycraft
+betterendforge:alloying
+betterendforge:anvil_smithing
+betterendforge:infusion
