--- a/config/burninthesun-common.toml
+++ b/config/burninthesun-common.toml
@@ -1,17 +1,17 @@
 
 [General]
-	#If enabled your console will fill with spam showing the various types of data you will need to fine tune this config
-	showConsoleIDS = false
-	#If selected the rest of the config is pointless. Default: false
-	tanningLotion = false
-	#Should players burn? Default: false
-	burnPlayers = false
-	#Should ops NOT burn? Default: true
-	noOpBurn = true
-	#Allow all of a mods' mobs from burning just by specifying the modid. Comma separated and quoted list
-	#Default: "iceandfire"
-	mods = ["iceandfire"]
 	#Allows specific mods' mobs to burn just by specifying their full id for example modid:mobname.  Comma separated and quoted list
 	#Default: "minecraft:zombie","minecraft:skeleton"
 	mobs = ["minecraft:chicken", "minecraft:cow", "minecraft:stray"]
+	#If enabled your console will fill with spam showing the various types of data you will need to fine tune this config
+	showConsoleIDS = false
+	#Allow all of a mods' mobs from burning just by specifying the modid. Comma separated and quoted list
+	#Default: "iceandfire"
+	mods = ["iceandfire"]
+	#If selected the rest of the config is pointless. Default: false
+	tanningLotion = false
+	#Should players burn? Default: false
+	burnPlayers = true
+	#Should ops NOT burn? Default: true
+	noOpBurn = true
 
