--- a/config/walljump-common.toml
+++ b/config/walljump-common.toml
@@ -2,7 +2,7 @@
 #Common configuration settings
 [common]
 	#Allows you to jump in mid-air
-	useDoubleJump = false
+	useDoubleJump = true
 	#Exhaustion gained per wall jump
 	#Range: 0.0 ~ 3.0
 	exhaustionWallJump = 0.8
@@ -16,7 +16,7 @@
 	#Walk up steps even while airborne, also jump over fences
 	stepAssist = true
 	#Allows you to climb up without alternating walls
-	allowReClinging = false
+	allowReClinging = true
 	#Sprint speed boost; set to 0.0 to disable
 	#Range: 0.0 ~ 3.0
 	sprintSpeedBoost = 0.0
