--- a/config/jei/ingredient-list-mod-sort-order.ini
+++ b/config/jei/ingredient-list-mod-sort-order.ini
@@ -1,9 +1,7 @@
 Minecraft
 Aquaculture 2
-Armor Underwear
 Astral Sorcery
 Backpacked
-Carrots Lib
 Charm
 Colt's Cosmetic Armour Mod
 Curios API
@@ -20,7 +18,6 @@ Pollution of the Realms
 Quark
 SecurityCraft
 Terra Incognita
-Tough As Nails
 Valhelsia Structures
 Alex's Mobs
 MrCrayfish's Furniture Mod
@@ -36,3 +33,5 @@ Wall-Jump!
 YUNG's Better Portals
 Better Animals Plus
 BetterEnd Forge
+Survive
+UnionLib
