--- a/config/jei/ingredient-list-mod-sort-order.ini
+++ b/config/jei/ingredient-list-mod-sort-order.ini
@@ -1,7 +1,9 @@
 Minecraft
 Aquaculture 2
+Armor Underwear
 Astral Sorcery
 Backpacked
+Carrots Lib
 Charm
 Colt's Cosmetic Armour Mod
 Curios API
@@ -18,6 +20,7 @@ Pollution of the Realms
 Quark
 SecurityCraft
 Terra Incognita
+Tough As Nails
 Valhelsia Structures
 Alex's Mobs
 MrCrayfish's Furniture Mod
@@ -33,5 +36,3 @@ Wall-Jump!
 YUNG's Better Portals
 Better Animals Plus
 BetterEnd Forge
-Survive
-UnionLib
