--- a/config/union.common.toml
+++ b/config/union.common.toml
@@ -7,7 +7,7 @@
 	#-------------------------------------------
 	#Default: false
 	#-------------------------------------------
-	"Boolean: Debug" = true
+	"Boolean: Debug" = false
 
 ["Test Group"]
 	#
