--- a/config/shouldersurfing.toml
+++ b/config/shouldersurfing.toml
@@ -11,14 +11,14 @@
 	limit_player_reach = true
 	#The default perspective when you load the game
 	#Allowed Values: FIRST_PERSON, THIRD_PERSON_BACK, THIRD_PERSON_FRONT, SHOULDER_SURFING
-	default_perspective = "FIRST_PERSON"
+	default_perspective = "SHOULDER_SURFING"
 	#Whether or not to remember the last perspective used
 	remember_last_perspective = true
 
 	[perspective.offset]
 		#Third person camera x-offset
 		#Range: -1.7976931348623157E308 ~ 1.7976931348623157E308
-		offset_x = -1.599999999999998
+		offset_x = -1.374999999999999
 		#Third person camera y-offset
 		#Range: -1.7976931348623157E308 ~ 1.7976931348623157E308
 		offset_y = 0.0
