--- a/config/fancyhud/config.cfg
+++ b/config/fancyhud/config.cfg
@@ -11,7 +11,7 @@ B:editordeleteconfirmation = 'true';
 ##[customization]
 
 B:showcustomizationcontrols = 'false';
-B:enablekeybinds = 'false';
+B:enablekeybinds = 'true';
 
 
 ##[ui]
