--- a/config/jei/ingredient-list-mod-sort-order.ini
+++ b/config/jei/ingredient-list-mod-sort-order.ini
@@ -1,4 +1,6 @@
 Minecraft
+Aquaculture 2
+Astral Sorcery
 Backpacked
 Charm
 Colt's Cosmetic Armour Mod
@@ -12,9 +14,12 @@ Mekanism: Tools
 MrCrayfish's Gun Mod
 MrCrayfish's Vehicle Mod
 Pane In The Glass
+Pollution of the Realms
 Quark
+SecurityCraft
 Terra Incognita
 Valhelsia Structures
+Alex's Mobs
 MrCrayfish's Furniture Mod
 Comforts
 Darker Depths
