--- a/config/jei/ingredient-list-mod-sort-order.ini
+++ b/config/jei/ingredient-list-mod-sort-order.ini
@@ -1,6 +1,4 @@
 Minecraft
-Aquaculture 2
-Astral Sorcery
 Backpacked
 Charm
 Colt's Cosmetic Armour Mod
@@ -14,12 +12,9 @@ Mekanism: Tools
 MrCrayfish's Gun Mod
 MrCrayfish's Vehicle Mod
 Pane In The Glass
-Pollution of the Realms
 Quark
-SecurityCraft
 Terra Incognita
 Valhelsia Structures
-Alex's Mobs
 MrCrayfish's Furniture Mod
 Comforts
 Darker Depths
@@ -34,3 +29,4 @@ Better Animals Plus
 BetterEnd Forge
 Survive
 UnionLib
+Timeless and Classic Mod Addon
