--- a/config/jei/bookmarks.ini
+++ b/config/jei/bookmarks.ini
@@ -1,1 +1,9 @@
+T:{id:"timeless_and_classic:round45",Count:1b}
+T:{id:"timeless_and_classic:9mm_round",Count:1b}
+T:{id:"timeless_and_classic:box_308-block",Count:1b}
+T:{id:"mekanism:lead_ore",Count:1b}
+T:{id:"minecraft:stone_pickaxe",Count:1b,tag:{Damage:77}}
+T:{id:"minecraft:gunpowder",Count:1b}
+T:{id:"timeless_and_classic:micro_uzi",Count:1b,tag:{AmmoCount:25}}
+T:{id:"timeless_and_classic:ar_15_hellmouth",Count:1b,tag:{AmmoCount:20}}
 T:{id:"cgm:heavy_rifle",Count:1b,tag:{AmmoCount:4,Attachments:{Scope:{id:"cgm:long_scope",Count:1b},Under_Barrel:{id:"cgm:light_grip",Count:1b}}}}
