--- a/config/survive.common.toml
+++ b/config/survive.common.toml
@@ -146,14 +146,14 @@
 	#-------------------------------------------
 	#Default: true
 	#-------------------------------------------
-	"Boolean: Enable Armor Weights" = true
+	"Boolean: Enable Armor Weights" = false
 	#
 	############################################
 	#Disabling this will disable this mods stamina system and energy management system
 	#-------------------------------------------
 	#Default: true
 	#-------------------------------------------
-	"Boolean: Enable Stamina" = true
+	"Boolean: Enable Stamina" = false
 
 [Hygiene]
 	#
