--- a/config/jei/bookmarks.ini
+++ b/config/jei/bookmarks.ini
@@ -1,3 +1,5 @@
+T:{id:"timeless_and_classic:m1911_nether",Count:1b,tag:{AmmoCount:8,Attachments:{Barrel:{id:"cgm:silencer",Count:1b}}}}
+T:{id:"timeless_and_classic:glock_17",Count:1b,tag:{AmmoCount:16}}
 T:{id:"timeless_and_classic:round45",Count:1b}
 T:{id:"timeless_and_classic:9mm_round",Count:1b}
 T:{id:"timeless_and_classic:box_308-block",Count:1b}
